# image-analysis

./: .gitignore  CMakeLists.txt  README.md
include/: filters.hpp  image.hpp  image_analyzer.hpp  indexer.hpp  kmeans.hpp  neural_network.hpp  pixel.hpp  recognition.hpp  signals.hpp  thresholder.hpp  util.hpp
src/: filters.cpp  image.cpp  image_analyzer.cpp  indexer.cpp  kmeans.cpp  main.cpp  neural_network.cpp  pixel.cpp  recognition.cpp  signals.cpp  thresholder.cpp  util.cpp
